tests/NormalTests/paczka1/small_fuzzy/45780127.err
Error in line 6: 2tM 310 19,0
Error in line 1: S310 A896 54,7
Error in line 7: nqFC1wjgf S310 65,8
